modif plage horaire du midi

--- a/agenda.html
+++ b/agenda.html
@@ -86,7 +86,7 @@
             <td>Row:1 Cell:5</td>
           </tr>
 
-          <tr>
+          <tr class="midi">
             <td>12:00</td>
             <td>Row:1 Cell:2</td>
             <td>Row:1 Cell:3</td>
@@ -97,7 +97,7 @@
             <td>Row:1 Cell:5</td>
           </tr>
 
-          <tr>
+          <tr class="midi">
             <td>13:00</td>
             <td>Row:1 Cell:2</td>
             <td>Row:1 Cell:3</td>
