--- a/agenda.html
+++ b/agenda.html
@@ -30,193 +30,200 @@
             </tr>
           </thead>
 
+          <tfoot>
+            <th colspan="8"><a href="formulaire.html" class="button">Ajouter un évènement</a></th>
+          </tfoot>
+
         <tbody>
           <tr>
             <td>7:00</td>
-            <td>Row:1 Cell:2</td>
-            <td>Row:1 Cell:3</td>
-            <td>Row:1 Cell:4</td>
-            <td>Row:1 Cell:5</td>
-            <td>Row:1 Cell:5</td>
-            <td>Row:1 Cell:5</td>
-            <td>Row:1 Cell:5</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
           </tr>
 
           <tr>
             <td>8:00</td>
-            <td>Row:1 Cell:2</td>
-            <td>Row:1 Cell:3</td>
-            <td>Row:1 Cell:4</td>
-            <td>Row:1 Cell:5</td>
-            <td>Row:1 Cell:5</td>
-            <td>Row:1 Cell:5</td>
-            <td>Row:1 Cell:5</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
           </tr>
 
           <tr>
             <td>9:00</td>
-            <td>Row:1 Cell:2</td>
-            <td>Row:1 Cell:3</td>
-            <td>Row:1 Cell:4</td>
-            <td>Row:1 Cell:5</td>
-            <td>Row:1 Cell:5</td>
-            <td>Row:1 Cell:5</td>
-            <td>Row:1 Cell:5</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
           </tr>
 
           <tr>
             <td>10:00</td>
-            <td>Row:1 Cell:2</td>
-            <td>Row:1 Cell:3</td>
-            <td>Row:1 Cell:4</td>
-            <td>Row:1 Cell:5</td>
-            <td>Row:1 Cell:5</td>
-            <td>Row:1 Cell:5</td>
-            <td>Row:1 Cell:5</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
           </tr>
 
           <tr>
             <td>11:00</td>
-            <td>Row:1 Cell:2</td>
-            <td>Row:1 Cell:3</td>
-            <td>Row:1 Cell:4</td>
-            <td>Row:1 Cell:5</td>
-            <td>Row:1 Cell:5</td>
-            <td>Row:1 Cell:5</td>
-            <td>Row:1 Cell:5</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
           </tr>
 
           <tr class="midi">
             <td>12:00</td>
-            <td>Row:1 Cell:2</td>
-            <td>Row:1 Cell:3</td>
-            <td>Row:1 Cell:4</td>
-            <td>Row:1 Cell:5</td>
-            <td>Row:1 Cell:5</td>
-            <td>Row:1 Cell:5</td>
-            <td>Row:1 Cell:5</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
           </tr>
 
           <tr class="midi">
             <td>13:00</td>
-            <td>Row:1 Cell:2</td>
-            <td>Row:1 Cell:3</td>
-            <td>Row:1 Cell:4</td>
-            <td>Row:1 Cell:5</td>
-            <td>Row:1 Cell:5</td>
-            <td>Row:1 Cell:5</td>
-            <td>Row:1 Cell:5</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
           </tr>
 
           <tr>
             <td>14:00</td>
-            <td>Row:1 Cell:2</td>
-            <td>Row:1 Cell:3</td>
-            <td>Row:1 Cell:4</td>
-            <td>Row:1 Cell:5</td>
-            <td>Row:1 Cell:5</td>
-            <td>Row:1 Cell:5</td>
-            <td>Row:1 Cell:5</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
           </tr>
 
           <tr>
             <td>15:00</td>
-            <td>Row:1 Cell:2</td>
-            <td>Row:1 Cell:3</td>
-            <td>Row:1 Cell:4</td>
-            <td>Row:1 Cell:5</td>
-            <td>Row:1 Cell:5</td>
-            <td>Row:1 Cell:5</td>
-            <td>Row:1 Cell:5</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
           </tr>
 
           <tr>
             <td>16:00</td>
-            <td>Row:1 Cell:2</td>
-            <td>Row:1 Cell:3</td>
-            <td>Row:1 Cell:4</td>
-            <td>Row:1 Cell:5</td>
-            <td>Row:1 Cell:5</td>
-            <td>Row:1 Cell:5</td>
-            <td>Row:1 Cell:5</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
           </tr>
 
           <tr>
             <td>17:00</td>
-            <td>Row:1 Cell:2</td>
-            <td>Row:1 Cell:3</td>
-            <td>Row:1 Cell:4</td>
-            <td>Row:1 Cell:5</td>
-            <td>Row:1 Cell:5</td>
-            <td>Row:1 Cell:5</td>
-            <td>Row:1 Cell:5</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
           </tr>
 
           <tr>
             <td>18:00</td>
-            <td>Row:1 Cell:2</td>
-            <td>Row:1 Cell:3</td>
-            <td>Row:1 Cell:4</td>
-            <td>Row:1 Cell:5</td>
-            <td>Row:1 Cell:5</td>
-            <td>Row:1 Cell:5</td>
-            <td>Row:1 Cell:5</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
           </tr>
 
           <tr>
             <td>19:00</td>
-            <td>Row:1 Cell:2</td>
-            <td>Row:1 Cell:3</td>
-            <td>Row:1 Cell:4</td>
-            <td>Row:1 Cell:5</td>
-            <td>Row:1 Cell:5</td>
-            <td>Row:1 Cell:5</td>
-            <td>Row:1 Cell:5</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
           </tr>
 
           <tr>
             <td>20:00</td>
-            <td>Row:1 Cell:2</td>
-            <td>Row:1 Cell:3</td>
-            <td>Row:1 Cell:4</td>
-            <td>Row:1 Cell:5</td>
-            <td>Row:1 Cell:5</td>
-            <td>Row:1 Cell:5</td>
-            <td>Row:1 Cell:5</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
           </tr>
 
           <tr>
             <td>21:00</td>
-            <td>Row:1 Cell:2</td>
-            <td>Row:1 Cell:3</td>
-            <td>Row:1 Cell:4</td>
-            <td>Row:1 Cell:5</td>
-            <td>Row:1 Cell:5</td>
-            <td>Row:1 Cell:5</td>
-            <td>Row:1 Cell:5</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
           </tr>
 
           <tr>
             <td>22:00</td>
-            <td>Row:1 Cell:2</td>
-            <td>Row:1 Cell:3</td>
-            <td>Row:1 Cell:4</td>
-            <td>Row:1 Cell:5</td>
-            <td>Row:1 Cell:5</td>
-            <td>Row:1 Cell:5</td>
-            <td>Row:1 Cell:5</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
           </tr>
 
           <tr>
             <td>23:00</td>
-            <td>Row:1 Cell:2</td>
-            <td>Row:1 Cell:3</td>
-            <td>Row:1 Cell:4</td>
-            <td>Row:1 Cell:5</td>
-            <td>Row:1 Cell:5</td>
-            <td>Row:1 Cell:5</td>
-            <td>Row:1 Cell:5</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
           </tr>
+
+
+
         </tbody>
       </table>
     </main>  
