--- a/agenda.html
+++ b/agenda.html
@@ -30,9 +30,7 @@
             </tr>
           </thead>
 
-          <tfoot>
-            <th colspan="8"><a href="formulaire.html" class="button">Ajouter un évènement</a></th>
-          </tfoot>
+         
 
         <tbody>
           <tr>
@@ -225,7 +223,12 @@
 
 
         </tbody>
+
       </table>
+
+      <div class="btn-container">
+        <button class="button"><a href="formulaire.html" >Ajouter un évènement</a></button>
+      </div>
     </main>  
     
 
