ajout de commentaires et rectification différents styes

--- a/formulaire.html
+++ b/formulaire.html
@@ -34,5 +34,6 @@
       <textarea id="description" name="description" placeholder="Ecrivez quelque chose..." style="height:200px"></textarea>
   
       <input type="submit" value="Valider">
+    </form>
   </body>
 </html>
